--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -6,6 +6,8 @@ name = "pypi"
 [packages]
 fastapi = "*"
 uvicorn = {extras = ["standard"], version = "*"}
+cloudinary = "*"
+python-dotenv = "*"
 
 [dev-packages]
 
