--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -8,6 +8,7 @@ fastapi = "*"
 uvicorn = {extras = ["standard"], version = "*"}
 cloudinary = "*"
 python-dotenv = "*"
+elevenlabs = "*"
 
 [dev-packages]
 
