Fix Elevenlabs and implement Cloudinary Upload

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,2 +1,7 @@
-CLOUDINARY_URL=""
+CLOUDINARY_CLOUD_NAME=""
+CLOUDINARY_API_KEY=""
+CLOUDINARY_API_SECRET=""
+
 ELEVENLABS_API_KEY=""
+
+HUGGINGFACE_API_KEY=""
