--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@govtechsg/sgds": "^2.2.0",
     "@govtechsg/sgds-react": "^2.4.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "axios": "^1.6.8",
     "bootstrap-icons": "^1.11.3",
     "class-variance-authority": "^0.7.0",
@@ -20,6 +22,7 @@
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.3",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
