Added generate audio and video scenes

--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -9,6 +9,8 @@ uvicorn = {extras = ["standard"], version = "*"}
 cloudinary = "*"
 python-dotenv = "*"
 elevenlabs = "*"
+whisper-timestamped = "*"
+aiohttp = "*"
 
 [dev-packages]
 
