--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,26 +1,46 @@
 -i https://pypi.org/simple
+aiohttp==3.9.3; python_version >= '3.8'
+aiosignal==1.3.1; python_version >= '3.7'
 annotated-types==0.6.0; python_version >= '3.8'
 anyio==4.3.0; python_version >= '3.8'
 asttokens==2.4.1
+async-timeout==4.0.3; python_version < '3.11'
+attrs==23.2.0; python_version >= '3.7'
 backcall==0.2.0
 certifi==2024.2.2; python_version >= '3.6'
 charset-normalizer==3.3.2; python_full_version >= '3.7.0'
 click==8.1.7; python_version >= '3.7'
 cloudinary==1.39.1
 colorama==0.4.6
+cython==3.0.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 decorator==5.1.1; python_version >= '3.5'
+dtw-python==1.4.2; python_version >= '3.6'
 elevenlabs==1.0.4; python_version >= '3.8' and python_version < '4.0'
 exceptiongroup==1.2.0; python_version < '3.11'
 executing==2.0.1; python_version >= '3.5'
 fastapi==0.110.1; python_version >= '3.8'
+filelock==3.13.3; python_version >= '3.8'
+frozenlist==1.4.1; python_version >= '3.8'
+fsspec==2024.3.1; python_version >= '3.8'
 h11==0.14.0; python_version >= '3.7'
 httpcore==1.0.5; python_version >= '3.8'
 httptools==0.6.1
 httpx==0.27.0; python_version >= '3.8'
 idna==3.6; python_version >= '3.5'
+importlib-metadata==7.1.0; python_version < '3.9'
 ipython==8.12.3; python_version >= '3.8'
 jedi==0.19.1; python_version >= '3.6'
+jinja2==3.1.3; python_version >= '3.7'
+llvmlite==0.41.1; python_version >= '3.8'
+markupsafe==2.1.5; python_version >= '3.7'
 matplotlib-inline==0.1.6; python_version >= '3.5'
+more-itertools==10.2.0; python_version >= '3.8'
+mpmath==1.3.0
+multidict==6.0.5; python_version >= '3.7'
+networkx==3.1; python_version >= '3.8'
+numba==0.58.1; python_version >= '3.8'
+numpy==1.24.4; python_version >= '3.8'
+openai-whisper==20231117; python_version >= '3.8'
 parso==0.8.4; python_version >= '3.6'
 pickleshare==0.7.5
 prompt-toolkit==3.0.43; python_full_version >= '3.7.0'
@@ -30,15 +50,24 @@ pydantic-core==2.16.3; python_version >= '3.8'
 pygments==2.17.2; python_version >= '3.7'
 python-dotenv==1.0.1; python_version >= '3.8'
 pyyaml==6.0.1
+regex==2023.12.25; python_version >= '3.7'
 requests==2.31.0; python_version >= '3.7'
+scipy==1.10.1; python_version < '3.12' and python_version >= '3.8'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sniffio==1.3.1; python_version >= '3.7'
 stack-data==0.6.3
 starlette==0.37.2; python_version >= '3.8'
+sympy==1.12; python_version >= '3.8'
+tiktoken==0.6.0; python_version >= '3.8'
+torch==2.2.2; python_full_version >= '3.8.0'
+tqdm==4.66.2; python_version >= '3.7'
 traitlets==5.14.2; python_version >= '3.8'
-typing-extensions==4.11.0; python_version >= '3.8'
+typing-extensions==4.11.0; python_version < '3.11'
 urllib3==2.2.1; python_version >= '3.8'
 uvicorn[standard]==0.29.0; python_version >= '3.8'
 watchfiles==0.21.0
 wcwidth==0.2.13
 websockets==12.0; python_version >= '3.8'
+whisper-timestamped==1.15.3; python_version >= '3.7'
+yarl==1.9.4; python_version >= '3.7'
+zipp==3.18.1; python_version >= '3.8'
