--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,7 +13,7 @@ click==8.1.7; python_version >= '3.7'
 cloudinary==1.39.1
 colorama==0.4.6
 cython==3.0.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-decorator==5.1.1; python_version >= '3.5'
+decorator==4.4.2; python_version >= '3.5'
 dtw-python==1.4.2; python_version >= '3.6'
 elevenlabs==1.0.4; python_version >= '3.8' and python_version < '4.0'
 exceptiongroup==1.2.0; python_version < '3.11'
@@ -27,6 +27,8 @@ httpcore==1.0.5; python_version >= '3.8'
 httptools==0.6.1
 httpx==0.27.0; python_version >= '3.8'
 idna==3.6; python_version >= '3.5'
+imageio==2.34.0; python_version >= '3.4'
+imageio-ffmpeg==0.4.9; python_version >= '3.4'
 importlib-metadata==7.1.0; python_version < '3.9'
 ipython==8.12.3; python_version >= '3.8'
 jedi==0.19.1; python_version >= '3.6'
@@ -35,14 +37,17 @@ llvmlite==0.41.1; python_version >= '3.8'
 markupsafe==2.1.5; python_version >= '3.7'
 matplotlib-inline==0.1.6; python_version >= '3.5'
 more-itertools==10.2.0; python_version >= '3.8'
+moviepy==1.0.3
 mpmath==1.3.0
 multidict==6.0.5; python_version >= '3.7'
 networkx==3.1; python_version >= '3.8'
 numba==0.58.1; python_version >= '3.8'
-numpy==1.24.4; python_version >= '3.8'
+numpy==1.24.4; python_version != '2.7'
 openai-whisper==20231117; python_version >= '3.8'
 parso==0.8.4; python_version >= '3.6'
 pickleshare==0.7.5
+pillow==10.3.0; python_version >= '3.8'
+proglog==0.1.10
 prompt-toolkit==3.0.43; python_full_version >= '3.7.0'
 pure-eval==0.2.2
 pydantic==2.6.4; python_version >= '3.8'
@@ -53,8 +58,10 @@ pyyaml==6.0.1
 regex==2023.12.25; python_version >= '3.7'
 requests==2.31.0; python_version >= '3.7'
 scipy==1.10.1; python_version < '3.12' and python_version >= '3.8'
+setuptools==69.2.0; python_version >= '3.8'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sniffio==1.3.1; python_version >= '3.7'
+srt==3.5.3; python_version >= '2.7'
 stack-data==0.6.3
 starlette==0.37.2; python_version >= '3.8'
 sympy==1.12; python_version >= '3.8'
@@ -62,7 +69,7 @@ tiktoken==0.6.0; python_version >= '3.8'
 torch==2.2.2; python_full_version >= '3.8.0'
 tqdm==4.66.2; python_version >= '3.7'
 traitlets==5.14.2; python_version >= '3.8'
-typing-extensions==4.11.0; python_version < '3.11'
+typing-extensions==4.11.0; python_version >= '3.8'
 urllib3==2.2.1; python_version >= '3.8'
 uvicorn[standard]==0.29.0; python_version >= '3.8'
 watchfiles==0.21.0
