Try Fix FakeVideo Endpoint for hosting

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,21 +6,18 @@ COPY requirements.txt .
 
 RUN pip install --no-cache-dir --upgrade -r requirements.txt
 
-RUN apt-get -y update
-
-RUN apt-get install ffmpeg libsm6 libxext6  -y
-
-RUN apt-get install -y imagemagick
-
-RUN apt-get -y install fonts-liberation
-
-RUN apt-get install -y locales && \
-  locale-gen C.UTF-8 && \
-  /usr/sbin/update-locale LANG=C.UTF-8
+RUN apt-get update && apt-get install -y \
+  ffmpeg \
+  libsm6 \
+  libxext6 \
+  imagemagick \
+  fonts-liberation \
+  locales \
+  && rm -rf /var/lib/apt/lists/*
 
 ENV LC_ALL C.UTF-8
 
-RUN sed -i 's/none/read,write/g' /etc/ImageMagick-6/policy.xml 
+RUN sed -i 's/none/read,write/g' /etc/ImageMagick-6/policy.xml
 
 COPY . .
 
