--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,6 +16,9 @@ RUN apt-get update && apt-get install -y \
   locales \
   && rm -rf /var/lib/apt/lists/*
 
+COPY llm_server/requirements.txt llm_server/requirements.txt
+RUN pip install --no-cache-dir -r llm_server/requirements.txt
+
 ENV LC_ALL C.UTF-8
 
 RUN sed -i 's/none/read,write/g' /etc/ImageMagick-6/policy.xml
