--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -14,6 +14,11 @@ aiohttp = "*"
 srt = "*"
 pillow = "*"
 moviepy = "*"
+weaviate-client = "*"
+langchain = "*"
+langsmith = "*"
+openai = "*"
+fastapi-cors = "*"
 
 [dev-packages]
 
