--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,22 +6,33 @@ anyio==4.3.0; python_version >= '3.8'
 asttokens==2.4.1
 async-timeout==4.0.3; python_version < '3.11'
 attrs==23.2.0; python_version >= '3.7'
+authlib==1.3.0; python_version >= '3.8'
 backcall==0.2.0
 certifi==2024.2.2; python_version >= '3.6'
+cffi==1.16.0; platform_python_implementation != 'PyPy'
 charset-normalizer==3.3.2; python_full_version >= '3.7.0'
 click==8.1.7; python_version >= '3.7'
 cloudinary==1.39.1
 colorama==0.4.6
+cryptography==42.0.5; python_version >= '3.7'
 cython==3.0.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+dataclasses-json==0.6.4; python_version >= '3.7' and python_version < '4.0'
 decorator==4.4.2; python_version >= '3.5'
+distro==1.9.0; python_version >= '3.6'
 dtw-python==1.4.2; python_version >= '3.6'
 elevenlabs==1.0.4; python_version >= '3.8' and python_version < '4.0'
+environs==11.0.0; python_version >= '3.8'
 exceptiongroup==1.2.0; python_version < '3.11'
 executing==2.0.1; python_version >= '3.5'
 fastapi==0.110.1; python_version >= '3.8'
+fastapi-cors==0.0.6; python_version >= '3.8'
 filelock==3.13.3; python_version >= '3.8'
 frozenlist==1.4.1; python_version >= '3.8'
 fsspec==2024.3.1; python_version >= '3.8'
+greenlet==3.0.3; platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))
+grpcio==1.62.1; python_version >= '3.7'
+grpcio-health-checking==1.62.1; python_version >= '3.6'
+grpcio-tools==1.62.1; python_version >= '3.7'
 h11==0.14.0; python_version >= '3.7'
 httpcore==1.0.5; python_version >= '3.8'
 httptools==0.6.1
@@ -33,47 +44,66 @@ importlib-metadata==7.1.0; python_version < '3.9'
 ipython==8.12.3; python_version >= '3.8'
 jedi==0.19.1; python_version >= '3.6'
 jinja2==3.1.3; python_version >= '3.7'
+jsonpatch==1.33; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
+jsonpointer==2.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
+langchain==0.1.14; python_version < '4.0' and python_full_version >= '3.8.1'
+langchain-community==0.0.31; python_version < '4.0' and python_full_version >= '3.8.1'
+langchain-core==0.1.40; python_version < '4.0' and python_full_version >= '3.8.1'
+langchain-text-splitters==0.0.1; python_version < '4.0' and python_full_version >= '3.8.1'
+langsmith==0.1.40; python_version < '4.0' and python_full_version >= '3.8.1'
 llvmlite==0.41.1; python_version >= '3.8'
 markupsafe==2.1.5; python_version >= '3.7'
+marshmallow==3.21.1; python_version >= '3.8'
 matplotlib-inline==0.1.6; python_version >= '3.5'
 more-itertools==10.2.0; python_version >= '3.8'
 moviepy==1.0.3
 mpmath==1.3.0
 multidict==6.0.5; python_version >= '3.7'
+mypy-extensions==1.0.0; python_version >= '3.5'
 networkx==3.1; python_version >= '3.8'
 numba==0.58.1; python_version >= '3.8'
-numpy==1.24.4; python_version != '2.7'
+numpy==1.24.4; python_version >= '3.8'
+openai==1.16.2; python_full_version >= '3.7.1'
 openai-whisper==20231117; python_version >= '3.8'
+orjson==3.10.0; python_version >= '3.8'
+packaging==23.2; python_version >= '3.7'
 parso==0.8.4; python_version >= '3.6'
 pickleshare==0.7.5
 pillow==10.3.0; python_version >= '3.8'
 proglog==0.1.10
 prompt-toolkit==3.0.43; python_full_version >= '3.7.0'
+protobuf==4.25.3; python_version >= '3.8'
 pure-eval==0.2.2
+pycparser==2.22; python_version >= '3.8'
 pydantic==2.6.4; python_version >= '3.8'
 pydantic-core==2.16.3; python_version >= '3.8'
 pygments==2.17.2; python_version >= '3.7'
 python-dotenv==1.0.1; python_version >= '3.8'
-pyyaml==6.0.1
+pyyaml==6.0.1; python_version >= '3.6'
 regex==2023.12.25; python_version >= '3.7'
 requests==2.31.0; python_version >= '3.7'
 scipy==1.10.1; python_version < '3.12' and python_version >= '3.8'
 setuptools==69.2.0; python_version >= '3.8'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sniffio==1.3.1; python_version >= '3.7'
+sqlalchemy==2.0.29; python_version >= '3.7'
 srt==3.5.3; python_version >= '2.7'
 stack-data==0.6.3
 starlette==0.37.2; python_version >= '3.8'
 sympy==1.12; python_version >= '3.8'
+tenacity==8.2.3; python_version >= '3.7'
 tiktoken==0.6.0; python_version >= '3.8'
 torch==2.2.2; python_full_version >= '3.8.0'
 tqdm==4.66.2; python_version >= '3.7'
 traitlets==5.14.2; python_version >= '3.8'
 typing-extensions==4.11.0; python_version >= '3.8'
+typing-inspect==0.9.0
 urllib3==2.2.1; python_version >= '3.8'
 uvicorn[standard]==0.29.0; python_version >= '3.8'
+validators==0.22.0; python_version >= '3.8'
 watchfiles==0.21.0
 wcwidth==0.2.13
+weaviate-client==4.5.5; python_version >= '3.8'
 websockets==12.0; python_version >= '3.8'
 whisper-timestamped==1.15.3; python_version >= '3.7'
 yarl==1.9.4; python_version >= '3.7'
